--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/IxUTFjUgQ18?si=B8JhpRPjkzHiM1ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 	<h3>＊歡迎光臨 淡江大學日文系JP＊</h3>
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/W-PVHBI7qZQ?si=Hp7ddAe9QV9qwRo4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-	
-	
+	<p>＊TKU.JP＊</p>
+	<a href="https://www.tfjx.tku.edu.tw/japanese/">淡 江 日 文</a>	
 </body>
 </html>
